Sat Feb  7 11:44:06 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (have_header): needs dependent headers if trying to
	  compile.

	* ext/socket/extconf.rb: net/if.h depends on other headers.

Sat Feb  7 04:02:37 2009  Tanaka Akira  <akr@fsij.org>

	* dir.c (dir_read): don't disable rdoc.

Fri Feb  6 23:28:33 2009  Tanaka Akira  <akr@fsij.org>

	* io.c (io_fread): use rb_io_wait_readable for retry
	  avoid Errno::EINTR on ruby -e 'trap(:CHLD) {}; spawn("sleep 1"); STDIN.read'

Fri Feb  6 22:36:11 2009  Alexander Zavorine  <alexandre.zavorine@nokia.com>

	* thread_pthread.c (native_thread_create) [__SYMBIAN32__]: reduced pthread stack size.

	* thread_pthread.c (thread_timer) [__SYMBIAN32__]: compiled out unsupported yet signal-related functionality.

	* io.c (pipe_open) [__SYMBIAN32__]: fixed compile time error.

Fri Feb  6 22:11:46 2009  Alexander Zavorine  <alexandre.zavorine@nokia.com>

	* include/ruby/defines.h [__SYMBIAN32__]: included <sys/select.h> for fd_set definition

Fri Feb  6 21:58:24 2009  Alexander Zavorine  <alexandre.zavorine@nokia.com>

	* symbian/missing-pips.c: added a stub for missing PIPS function execl.

	* process.c (rb_proc_exec) [__SYMBIAN32__]: removed conditional around execl function call.

Fri Feb  6 20:37:42 2009  Tanaka Akira  <akr@fsij.org>

	* signal.c (register_sigaltstack): ignore sigaltstack error.
	  It fails on OpenBSD 4.4 when pthread library is linked.

Fri Feb  6 18:18:07 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_readdir_with_enc): fallback to OS's conversion
	  when ASCII-8BIT is passed.

Fri Feb  6 17:19:23 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/{dir.h, win32.c} (rb_w32_readdir_with_enc): new function to
	  read entry with specified enc.

	* win32/win32.c (readdir_internal): extract from rb_w32_opendir().

	* win32/win32.c (opendir_internal): extract from rb_w32_readdir().

	* dir.c (dir_read, dir_each): use new READDIR macro instead of readdir()